--- a/src/pug/components/Header.pug
+++ b/src/pug/components/Header.pug
@@ -38,7 +38,7 @@ header
 
                 input(type="tel", name="userName" placeholder="Написати..." required).search#phoneInput
                 label(for="userPromo") 
-                    p Промокод
+                    p#isPromoUsed Промокод
 
                 input(type="text", name="userPromo" placeholder="Написати...").search
                 
