--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -25,32 +25,32 @@ html(lang="en")
 
             .categories.row.g-5#categories
                 
-                a(href="category.html" data-value="Electronics").category-block.col-12.col-lg-6
+                a(href="category.html" data-value="Electronics").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/category1.jpg", alt="")
                         p.col-8.d-flex.align-items-center Електроніка
-                a(href="category.html" data-value="Clocks").category-block.col-12.col-lg-6
+                a(href="category.html" data-value="Clocks").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/clock.jpeg", alt="")
                         p.col-8.d-flex.align-items-center Годинники
-                a(href="category.html" data-value="Dishes").category-block.col-12.col-lg-6
+                a(href="category.html" data-value="Dishes").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/dishes.jpeg", alt="")
                         p.col-8.d-flex.align-items-center Посуд
-                a(href="category.html" data-value="Models").category-block.col-12.col-lg-6
+                a(href="category.html" data-value="Models").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/models.jpeg", alt="")
                         p.col-8.d-flex.align-items-center Статуетки, моделі
-                a(href="category.html" data-value="Art").category-block.col-12.col-lg-6
+                a(href="category.html" data-value="Art").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/art.jpeg", alt="")
                         p.col-8.d-flex.align-items-center Мистецтво
-                a(href="category.html" data-value="Other").category-block.col-12.col-lg-6
+                a(href="category.html" data-value="Other").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/other.jpeg", alt="")
@@ -62,16 +62,18 @@ html(lang="en")
             .aboutus.d-flex.justify-content-between.row.g-5#aboutus
                 section.aboutus-text.col-sm-12.col-md-12.col-lg-6
                     .scroll
-                        h1 Вітаємо вас у нашому інтернет-магазині “Антік”.
-                        p Ми – команда захоплених колекціонерів і цінителів антикваріату, яка вже понад 5 років займається доставкою унікальних старовинних речей із Нідерландів в Україну. Наш асортимент включає предмети з історією: від витончених меблів і порцеляни до колекційних дрібниць, які наповнять ваш простір атмосферою минулих століть. 
-                            br 
-                            br
-                            | Ми маємо фізичний магазин у місті Хмельницький, який став місцем зустрічі для колекціонерів та поціновувачів старовини. А тепер раді вітати вас і на нашому новому сайті, де можна легко переглянути та придбати товари онлайн. Кожен наш предмет ретельно відбирається, щоб відповідати вашим очікуванням і дарувати радість від володіння справжніми антикварними скарбами. Ми віримо, що кожна річ має свою душу і здатна стати особливою частиною вашого дому чи колекції. 
-                            br
-                            br
-                            | Долучайтеся до нашої спільноти колекціонерів та знайдіть свою історію серед наших скарбів! 
+                        h1 Вітаємо вас у нашому інтернет-магазині "Антік".
+                        p.text-content
+                            | Ми – команда захоплених колекціонерів і цінителів антикваріату, яка вже понад 5 років займається доставкою унікальних старовинних речей із Нідерландів в Україну. Наш асортимент включає предмети з історією: від витончених меблів і порцеляни до колекційних дрібниць, які наповнять ваш простір атмосферою минулих століть.
+                            span.mobile-hidden
+                                br 
+                                br
+                                | Ми маємо фізичний магазин у місті Хмельницький, який став місцем зустрічі для колекціонерів та поціновувачів старовини. А тепер раді вітати вас і на нашому новому сайті, де можна легко переглянути та придбати товари онлайн. Кожен наш предмет ретельно відбирається, щоб відповідати вашим очікуванням і дарувати радість від володіння справжніми антикварними скарбами. Ми віримо, що кожна річ має свою душу і здатна стати особливою частиною вашого дому чи колекції. 
+                                br
+                                br
+                                | Долучайтеся до нашої спільноти колекціонерів та знайдіть свою історію серед наших скарбів!
+                        button.read-more-btn.d-md-none.d-lg-none.button Читати далі
                 .image-block.col-sm-12.col-md-12.col-lg-6
-
                         img(src="img/aboutus.jpg", alt="")
                         .d-flex.justify-content-center
                             a(href="#categories").button Каталог
@@ -85,14 +87,14 @@ html(lang="en")
                     .scroll
                         h2 Як придбати товар у нашому інтернет-магазині: 
 
-                        ol
+                        ol.text-content
                             li 1. Спершу, оберіть потрібний товар! У нас точно знайдеться те, що буде вам по душі та доповнить колекцію...
                             li 2. Додайте усі товари, котрі бажаєте придбати у кошик.
-                            li 3. Зайдіть до свого кошика і натисніть кнопку “замовити”, після чого заповніть усю інформацію.
+                            li 3. Зайдіть до свого кошика і натисніть кнопку "замовити", після чого заповніть усю інформацію.
                             li 4. Протягом нетривалого часу вам напише адміністратор для уточнення та відправки замовлення.
-
-                        p Усі замовлення відправляються виключно “Накладним платежем”, або “сейф-сервісом”, отже ваша безпека та якість гарантована!
-
+                            span.mobile-hidden
+                                p Усі замовлення відправляються виключно "Накладним платежем", або "сейф-сервісом", отже ваша безпека та якість гарантована!
+                        button.read-more-btn.d-md-none.d-lg-none.button Читати далі
             .contact-form#form
                 form() 
                     label(for="userName") 
