--- a/src/pug/components/Footer.pug
+++ b/src/pug/components/Footer.pug
@@ -2,11 +2,11 @@ footer.d-flex.justify-content-center
     .footer-list
         ul
             li
-                a(href="#categories") Категорії товару
+                a(href="index.html#categories") Категорії товару
             li
-                a(href="#aboutus") Про нас
+                a(href="index.html#aboutus") Про нас
             li
-                a(href="#form") Зв’язатись із нами
+                a(href="index.html#form") Зв’язатись із нами
         ul
             li
                 a(href="" onclick="event.preventDefault()").cart-open-btn Кошик
