--- a/src/pug/components/Header.pug
+++ b/src/pug/components/Header.pug
@@ -73,7 +73,7 @@ header
                         h2#allPriceWithPromo 9999 грн
                         .buy-btn
 
-                            button(type="submit").check-out-open-ready-popup Замовити
+                            button(type="submit").check-out-open-ready-popup.button Замовити
 .basket-popup.basket-popup-js
     .basket-header
         .wrapper.d-flex.justify-content-between
@@ -86,7 +86,7 @@ header
         .wrapper.d-flex.justify-content-between.align-items-center
             h2#totalPrice 9999 грн
             .buy-btn
-                a(href="#").checkout-btn#checkoutBtn Замовити
+                a(href="#").checkout-btn#checkoutBtn.button Замовити
 
 .header-sm-popup
     ul
