pravki, adaptiv, appProds

--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -17,7 +17,7 @@ html
 
 body
     font-family: Inter
-    padding-top: 9rem
+    padding-top: 56px
     background: linear-gradient(to bottom, #EBEBEB, #858585)
 
 ul
