--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -713,8 +713,10 @@ input[type="radio"]:checked
         margin-bottom: 0
 
 .card-btns a
-    font-size: 8rem
+    font-size: 6rem
     margin-left: 1rem
+    +media(400)
+        font-size: 8rem
 
 .product-card-info-img
     margin-bottom: 7rem
