--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -140,6 +140,19 @@ ul
     &:hover
         transform: scale(1.1)
 
+.relative
+    position: relative
+
+.triangle
+    position: absolute
+    right: 3px
+    bottom: 3px
+    width: 18px
+    height: 16px
+    background-image: url("../img/triangle.svg")
+    transform: scale(0)
+    transition: all .3s ease
+
 .button
     color: #000
     font-size: 6rem
