--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -344,7 +344,8 @@ p.price
     text-align: left
     
     img
-        margin: 5.75rem 4.9rem
+        box-sizing: content-box
+        padding: 5.75rem 4.9rem
         +media(400)
             margin: 5.75rem auto
         +media(769)
