--- a/src/pug/components/Header.pug
+++ b/src/pug/components/Header.pug
@@ -18,7 +18,7 @@ header
                     
                 ul.d-flex
                     a(href="#").cart.d-flex.align-items-center.cart-open-btn#cartUpdate.relative
-                        img(src="img/cart.svg", alt="")
+                        img(src="img/cart.svg", alt="Зображення іконки кошика, в який можна добавити та ПРИДБАТИ раритетний цінний антикваріат по низькій ціні у інтернет-магазині Antik")
                         .triangle
 
 .basket-popup.check-out-popup-js
@@ -26,7 +26,7 @@ header
         .wrapper.d-flex.justify-content-between
             h2 Оформлення
             .cross.d-flex.justify-content-center.align-items-center.checkout-btn
-                img(src="img/cross.svg", alt="")
+                img(src="img/cross.svg", alt="Зображення іконки хрестика, товару який можна ПРИДБАТИ раритетний цінний антикваріат по низькій ціні у інтернет-магазині Antik")
     .wrapper.basket-main.products.row.g-5.d-flex
         .contact-form.contact-form-popup
             form(action="")#checkOutForm
