--- a/src/pug/components/product-card.pug
+++ b/src/pug/components/product-card.pug
@@ -2,11 +2,11 @@ figure.col-6.col-md-4.col-lg-3
     
     figcaption 
         .figure-image 
-            img(src="img/product-card-image.jpeg", alt="")
+            img(src="img/product-card-image.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
             a(href="product-card.html").figure-to-card-page
         .card-text-block.d-flex.justify-content-between.w-100
             a(href="product-card.html").description-card 
                 p  Тіпа жосткий старий товарчик
                 p.price 999 грн.
             a(href="#").card-btn.al-center.d-flex.justify-content-center
-                img(src="img/cart.svg", alt="")
+                img(src="img/cart.svg", alt="Зображення іконки кошика, в який можна добавити та ПРИДБАТИ раритетний цінний антикваріат по низькій ціні у інтернет-магазині Antik" loading="lazy")
