--- a/src/pug/product-card.pug
+++ b/src/pug/product-card.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang="en")
+html(lang="uk")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -9,6 +9,16 @@ html(lang="en")
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        <meta name="description" content="Ми купуємо ексклюзивні речі в Голландії та пропонуємо Українцям! Ви зможете знайти скарб, котрий перепродасте, або доповните ним свою колекцію…">
+        <meta name="keywords" content="антикваріат, антикварні речі, старовинні предмети, колекційні вироби, антикварний магазин, раритетні предмети, антикварні меблі, старовинний годинник, антикварні монети, антикварні картини, реставрація антикваріату, винтажні товари">
+        <meta name="author" content="Antik - дім антикваріату з Нідерландів.">
+        <meta name="language" content="ukrainian">
+        <meta name="robots" content="index, follow">
+        <meta property="og:title" content="Antik - дім антикваріату з Нідерландів | Купити старовинні речі онлайн">
+        <meta property="og:description" content="Ми купуємо ексклюзивні речі в Голландії та пропонуємо Українцям! Ви зможете знайти скарб, котрий перепродасте, або доповните ним свою колекцію…">
+        <meta property="og:image" content="img/aboutus.jpg">
+        <meta property="og:type" content="website">
+        <meta property="og:locale" content="uk_UA">
 
     body 
         include components/Header.pug
@@ -19,16 +29,16 @@ html(lang="en")
                     #takeJsHeight
                         .product-card-info-img
                             .bgwhite.p-3.brs
-                                img(src="img/clock.jpeg", alt="")
+                                img(src="img/clock.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                 .next-images-line.row
                                     .col-3
-                                        img(src="img/clock.jpeg", alt="")
+                                        img(src="img/clock.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                     .col-3
-                                        img(src="img/models.jpeg", alt="")
+                                        img(src="img/models.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                     .col-3
-                                        img(src="img/other.jpeg", alt="")
+                                        img(src="img/other.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                     .col-3
-                                        img(src="img/dishes.jpeg", alt="")
+                                        img(src="img/dishes.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                 .card-btns.d-flex.align-items-center.justify-content-between
                                     a(href="#").button В кошик
                                     .d-flex.justify-content-end
