--- a/src/pug/searchresults.pug
+++ b/src/pug/searchresults.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang="en")
+html(lang="uk")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -9,6 +9,17 @@ html(lang="en")
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        <meta name="description" content="Ми купуємо ексклюзивні речі в Голландії та пропонуємо Українцям! Ви зможете знайти скарб, котрий перепродасте, або доповните ним свою колекцію…">
+        <meta name="keywords" content="антикваріат, антикварні речі, старовинні предмети, колекційні вироби, антикварний магазин, раритетні предмети, антикварні меблі, старовинний годинник, антикварні монети, антикварні картини, реставрація антикваріату, винтажні товари">
+        <meta name="author" content="Antik - дім антикваріату з Нідерландів.">
+        <meta name="language" content="ukrainian">
+        <meta name="robots" content="index, follow">
+        <meta property="og:title" content="Antik - дім антикваріату з Нідерландів | Купити старовинні речі онлайн">
+        <meta property="og:description" content="Ми купуємо ексклюзивні речі в Голландії та пропонуємо Українцям! Ви зможете знайти скарб, котрий перепродасте, або доповните ним свою колекцію…">
+        <meta property="og:image" content="img/aboutus.jpg">
+        <meta property="og:type" content="website">
+        <meta property="og:locale" content="uk_UA">
+
 
     body 
         include components/Header.pug
