--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang="en")
+html(lang="uk")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -9,6 +9,16 @@ html(lang="en")
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        <meta name="description" content="Ми купуємо ексклюзивні речі в Голландії та пропонуємо Українцям! Ви зможете знайти скарб, котрий перепродасте, або доповните ним свою колекцію…">
+        <meta name="keywords" content="антикваріат, антикварні речі, старовинні предмети, колекційні вироби, антикварний магазин, раритетні предмети, антикварні меблі, старовинний годинник, антикварні монети, антикварні картини, реставрація антикваріату, винтажні товари">
+        <meta name="author" content="Antik - дім антикваріату з Нідерландів.">
+        <meta name="language" content="ukrainian">
+        <meta name="robots" content="index, follow">
+        <meta property="og:title" content="Antik - дім антикваріату з Нідерландів | Купити старовинні речі онлайн">
+        <meta property="og:description" content="Ми купуємо ексклюзивні речі в Голландії та пропонуємо Українцям! Ви зможете знайти скарб, котрий перепродасте, або доповните ним свою колекцію…">
+        <meta property="og:image" content="img/aboutus.jpg">
+        <meta property="og:type" content="website">
+        <meta property="og:locale" content="uk_UA">
 
     body 
         
@@ -28,32 +38,32 @@ html(lang="en")
                 a(href="category.html" data-value="Electronics").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/category1.jpg", alt="")
+                            img(src="img/category1.jpg", alt="Фото категорії старовинної раритетної антикварної електроніки. Придбати раритетну електроніку в Україні. Антикварний магазин з Нідерландів. Раритетні грамофони та програвачі. Раритетні радіоприймачі. Раритетні фотоапарати та відеокамери" loading="lazy")
                         p.col-8.d-flex.align-items-center Електроніка
                 a(href="category.html" data-value="Clocks").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/clock.jpeg", alt="")
+                            img(src="img/clock.jpeg", alt="Фото категорії старовинних годинників. Придбати раритетні антикварні годинники в Україні. Антикварний магазин з Нідерландів. Раритетні настінні та настільні годинники, годинники з бронзи, годинники з золотими циферблатами, старовинні швейцарські годинники." loading="lazy")
                         p.col-8.d-flex.align-items-center Годинники
                 a(href="category.html" data-value="Dishes").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/dishes.jpeg", alt="")
+                            img(src="img/dishes.jpeg", alt="Фото категорії старовинного посуду. Придбати антикварний посуд в Україні. Антикварний магазин з Нідерландів. Раритетні тарілки, чашки, столові прибори, порцелянові та керамічні вироби, антикварні набори посуду." loading="lazy")
                         p.col-8.d-flex.align-items-center Посуд
                 a(href="category.html" data-value="Models").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/models.jpeg", alt="")
+                            img(src="img/models.jpeg", alt="Фото категорії старовинних статуеток. Придбати раритетні антикварні статуетки в Україні. Антикварний магазин з Нідерландів. Раритетні бронзові, порцелянові та керамічні статуетки, скульптури відомих майстрів." loading="lazy")
                         p.col-8.d-flex.align-items-center Статуетки, моделі
                 a(href="category.html" data-value="Art").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/art.jpeg", alt="")
+                            img(src="img/art.jpeg", alt="Фото категорії старовинного мистецтва. Придбати антикварні картини, графіку та скульптури в Україні. Антикварний магазин з Нідерландів. Раритетні художні твори, живопис, графіка, оригінальні скульптури та декоративні предмети мистецтва." loading="lazy")
                         p.col-8.d-flex.align-items-center Мистецтво
                 a(href="category.html" data-value="Other").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/other.jpeg", alt="")
+                            img(src="img/other.jpeg", alt="Фото категорії інших антикварних предметів. Придбати унікальні антикваріати в Україні. Антикварний магазин з Нідерландів. Раритетні ключі, монети, медалі, старовинні документи, рідкісні книги та інші антикварні предмети." loading="lazy")
                         p.col-8.d-flex.align-items-center Інше
 
 
@@ -74,13 +84,13 @@ html(lang="en")
                                 | Долучайтеся до нашої спільноти колекціонерів та знайдіть свою історію серед наших скарбів!
                         button.read-more-btn.d-md-none.d-lg-none.button Читати далі
                 .image-block.col-sm-12.col-md-12.col-lg-6
-                        img(src="img/aboutus.jpg", alt="")
+                        img(src="img/aboutus.jpg", alt="Фото фізичного магазину Antik антикваріату у Хмельницькому. Придбати антикварні речі в Україні. Антикварний магазин з Нідерландів. Раритетні антикварні речі, предмети мистецтва, меблі, посуд, годинники, статуетки, інше." loading="lazy")
                         .d-flex.justify-content-center
                             a(href="#categories").button Каталог
             .aboutus.d-flex.justify-content-between.row.g-5.flex-wrap-wrap-reverse.nova-section
                 .image-block.col-sm-12.col-md-12.col-lg-6
 
-                        img(src="img/novaposht.jpeg", alt="").image-block--img
+                        img(src="img/novaposht.jpeg", alt="Фото доставки Нової Пошти, за допомогою якого ми робимо доставку антикваріату та раритетних цінних речей по Україні" loading="lazy").image-block--img
                         .d-flex.justify-content-center
                             a(href="#categories").button Каталог
                 section.aboutus-text.col-sm-12.col-md-12.col-lg-6
