--- a/src/pug/searchresults.pug
+++ b/src/pug/searchresults.pug
@@ -16,7 +16,7 @@ html(lang="uk")
         <meta name="robots" content="index, follow">
         <meta property="og:title" content="Antik - дім антикваріату з Нідерландів | Купити старовинні речі онлайн">
         <meta property="og:description" content="Ми купуємо ексклюзивні речі в Голландії та пропонуємо Українцям! Ви зможете знайти скарб, котрий перепродасте, або доповните ним свою колекцію…">
-        <meta property="og:image" content="img/aboutus.jpg">
+        <meta property="og:image" content="img/aboutus.webp">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="uk_UA">
 
