--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -16,7 +16,7 @@ html(lang="uk")
         <meta name="robots" content="index, follow">
         <meta property="og:title" content="Antik - дім антикваріату з Нідерландів | Купити старовинні речі онлайн">
         <meta property="og:description" content="Ми купуємо ексклюзивні речі в Голландії та пропонуємо Українцям! Ви зможете знайти скарб, котрий перепродасте, або доповните ним свою колекцію…">
-        <meta property="og:image" content="img/aboutus.jpg">
+        <meta property="og:image" content="img/aboutus.webp">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="uk_UA">
 
@@ -38,32 +38,32 @@ html(lang="uk")
                 a(href="category.html" data-value="Electronics").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/category1.jpg", alt="Фото категорії старовинної раритетної антикварної електроніки. Придбати раритетну електроніку в Україні. Антикварний магазин з Нідерландів. Раритетні грамофони та програвачі. Раритетні радіоприймачі. Раритетні фотоапарати та відеокамери" loading="lazy")
+                            img(src="img/category1.webp", alt="Фото категорії старовинної раритетної антикварної електроніки. Придбати раритетну електроніку в Україні. Антикварний магазин з Нідерландів. Раритетні грамофони та програвачі. Раритетні радіоприймачі. Раритетні фотоапарати та відеокамери" loading="lazy")
                         p.col-8.d-flex.align-items-center Електроніка
                 a(href="category.html" data-value="Clocks").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/clock.jpeg", alt="Фото категорії старовинних годинників. Придбати раритетні антикварні годинники в Україні. Антикварний магазин з Нідерландів. Раритетні настінні та настільні годинники, годинники з бронзи, годинники з золотими циферблатами, старовинні швейцарські годинники." loading="lazy")
+                            img(src="img/clock.webp", alt="Фото категорії старовинних годинників. Придбати раритетні антикварні годинники в Україні. Антикварний магазин з Нідерландів. Раритетні настінні та настільні годинники, годинники з бронзи, годинники з золотими циферблатами, старовинні швейцарські годинники." loading="lazy")
                         p.col-8.d-flex.align-items-center Годинники
                 a(href="category.html" data-value="Dishes").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/dishes.jpeg", alt="Фото категорії старовинного посуду. Придбати антикварний посуд в Україні. Антикварний магазин з Нідерландів. Раритетні тарілки, чашки, столові прибори, порцелянові та керамічні вироби, антикварні набори посуду." loading="lazy")
+                            img(src="img/dishes.webp", alt="Фото категорії старовинного посуду. Придбати антикварний посуд в Україні. Антикварний магазин з Нідерландів. Раритетні тарілки, чашки, столові прибори, порцелянові та керамічні вироби, антикварні набори посуду." loading="lazy")
                         p.col-8.d-flex.align-items-center Посуд
                 a(href="category.html" data-value="Models").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/models.jpeg", alt="Фото категорії старовинних статуеток. Придбати раритетні антикварні статуетки в Україні. Антикварний магазин з Нідерландів. Раритетні бронзові, порцелянові та керамічні статуетки, скульптури відомих майстрів." loading="lazy")
+                            img(src="img/models.webp", alt="Фото категорії старовинних статуеток. Придбати раритетні антикварні статуетки в Україні. Антикварний магазин з Нідерландів. Раритетні бронзові, порцелянові та керамічні статуетки, скульптури відомих майстрів." loading="lazy")
                         p.col-8.d-flex.align-items-center Статуетки, моделі
                 a(href="category.html" data-value="Art").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/art.jpeg", alt="Фото категорії старовинного мистецтва. Придбати антикварні картини, графіку та скульптури в Україні. Антикварний магазин з Нідерландів. Раритетні художні твори, живопис, графіка, оригінальні скульптури та декоративні предмети мистецтва." loading="lazy")
+                            img(src="img/art.webp", alt="Фото категорії старовинного мистецтва. Придбати антикварні картини, графіку та скульптури в Україні. Антикварний магазин з Нідерландів. Раритетні художні твори, живопис, графіка, оригінальні скульптури та декоративні предмети мистецтва." loading="lazy")
                         p.col-8.d-flex.align-items-center Мистецтво
                 a(href="category.html" data-value="Other").category-block.col-12.col-lg-6.category-link
                     .category.d-flex.align-items-center.row
                         .col-4
-                            img(src="img/other.jpeg", alt="Фото категорії інших антикварних предметів. Придбати унікальні антикваріати в Україні. Антикварний магазин з Нідерландів. Раритетні ключі, монети, медалі, старовинні документи, рідкісні книги та інші антикварні предмети." loading="lazy")
+                            img(src="img/other.webp", alt="Фото категорії інших антикварних предметів. Придбати унікальні антикваріати в Україні. Антикварний магазин з Нідерландів. Раритетні ключі, монети, медалі, старовинні документи, рідкісні книги та інші антикварні предмети." loading="lazy")
                         p.col-8.d-flex.align-items-center Інше
 
 
@@ -84,13 +84,13 @@ html(lang="uk")
                                 | Долучайтеся до нашої спільноти колекціонерів та знайдіть свою історію серед наших скарбів!
                         button.read-more-btn.d-md-none.d-lg-none.button Читати далі
                 .image-block.col-sm-12.col-md-12.col-lg-6
-                        img(src="img/aboutus.jpg", alt="Фото фізичного магазину Antik антикваріату у Хмельницькому. Придбати антикварні речі в Україні. Антикварний магазин з Нідерландів. Раритетні антикварні речі, предмети мистецтва, меблі, посуд, годинники, статуетки, інше." loading="lazy")
+                        img(src="img/aboutus.webp", alt="Фото фізичного магазину Antik антикваріату у Хмельницькому. Придбати антикварні речі в Україні. Антикварний магазин з Нідерландів. Раритетні антикварні речі, предмети мистецтва, меблі, посуд, годинники, статуетки, інше." loading="lazy")
                         .d-flex.justify-content-center
                             a(href="#categories").button Каталог
             .aboutus.d-flex.justify-content-between.row.g-5.flex-wrap-wrap-reverse.nova-section
                 .image-block.col-sm-12.col-md-12.col-lg-6
 
-                        img(src="img/novaposht.jpeg", alt="Фото доставки Нової Пошти, за допомогою якого ми робимо доставку антикваріату та раритетних цінних речей по Україні" loading="lazy").image-block--img
+                        img(src="img/novaposht.webp", alt="Фото доставки Нової Пошти, за допомогою якого ми робимо доставку антикваріату та раритетних цінних речей по Україні" loading="lazy").image-block--img
                         .d-flex.justify-content-center
                             a(href="#categories").button Каталог
                 section.aboutus-text.col-sm-12.col-md-12.col-lg-6
