--- a/src/pug/product-card.pug
+++ b/src/pug/product-card.pug
@@ -16,7 +16,7 @@ html(lang="uk")
         <meta name="robots" content="index, follow">
         <meta property="og:title" content="Antik - дім антикваріату з Нідерландів | Купити старовинні речі онлайн">
         <meta property="og:description" content="Ми купуємо ексклюзивні речі в Голландії та пропонуємо Українцям! Ви зможете знайти скарб, котрий перепродасте, або доповните ним свою колекцію…">
-        <meta property="og:image" content="img/aboutus.jpg">
+        <meta property="og:image" content="img/aboutus.webp">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="uk_UA">
 
@@ -29,16 +29,16 @@ html(lang="uk")
                     #takeJsHeight
                         .product-card-info-img
                             .bgwhite.p-3.brs
-                                img(src="img/clock.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
+                                img(src="img/clock.webp", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                 .next-images-line.row
                                     .col-3
-                                        img(src="img/clock.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
+                                        img(src="img/clock.webp", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                     .col-3
-                                        img(src="img/models.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
+                                        img(src="img/models.webp", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                     .col-3
-                                        img(src="img/other.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
+                                        img(src="img/other.webp", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                     .col-3
-                                        img(src="img/dishes.jpeg", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
+                                        img(src="img/dishes.webp", alt="Зображення раритетного антикваріатного товару, що можна замовити онлайн доставку антикваріату та раритетних цінних речей по всій Україні через інтернет магазин Antik - дім антикваріату з Нідерландів." loading="lazy")
                                 .card-btns.d-flex.align-items-center.justify-content-between
                                     a(href="#").button В кошик
                                     .d-flex.justify-content-end
