--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -738,6 +738,8 @@ input[type="radio"]:checked
 
 .product-card-info-img
     margin-bottom: 7rem
+    +media(991)
+        margin-bottom: 0
 
 .product-card-info-img > div
     width: 100%
